<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="temp">temp</string>
    <string name="app_name">Days Until Lite</string>
    <string name="title_section1">Days Until</string>
    <string name="title_section2">Days Since</string>
    <string name="action_settings">Settings</string>
    <string name="create_date">Add Date</string>
    <string name="title_activity_create_event">Create New Event</string>
    <string name="create_event">Create Event</string>
    <string name="exclude_weekends">Don\'t count weekends</string>
    <string name="change_date">Change date</string>
    <string name="change_time">Change time</string>
    <string name="event_name">Event name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="help">Help</string>
    <string name="title_activity_help_menu">Help</string>
    <string name="title_activity_settings">Settings</string>
    <string name="twenty_four_hour_clock">Use 24-hour format</string>
    <string name="twenty_four_hour_summary">1:00 PM</string>
    <string name="events_to_since">Move to \"Days Since\" by default</string>
    <string name="events_to_since_summary">Automatically move events to \"Days Since\" when they expire</string>
    <string name="daysSinceBox">Move to \"Days Since\" upon expiry</string>

    <string-array name="spinnerArray">
        <item>Don\'t Repeat</item>
        <item>Repeat Daily</item>
        <item>Repeat Weekly</item>
        <item>Repeat Monthly</item>
        <item>Repeat Yearly</item>
    </string-array>

    <string name="repetition_view">Repetition:</string>
    <string name="every">Every</string>
    <string name="title_activity_edit_event">Edit Event</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_detail_pane">DetailPane</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="notice_weekends_setting">Show weekends notice</string>
    <string name="notice_weekends_summary">Show notice on cards that are not counting weekends</string>
    <string name="excludes_weekends">excludes weekends</string>
    <string name="notification_check_box_create">Notify when occurs</string>
    <string name="notification_icon_imageview">Notification is set</string>
    <string name="tempmonth">Jan</string>
    <string name="tempday">29</string>
    <string name="actionbar_theme_setting">Action Bar theme</string>
    <string name="select_theme">Select Theme</string>
    <string name="calendar_icon_setting">Calendar icon theme</string>
    <string name="ad_unit_id_days">ca-app-pub-8818613542307211/8521784481</string>
    <string name="ad_unit_id_days_2">ca-app-pub-8818613542307211/4870314084</string>
    <string name="import_from_cal">Import from calendar</string>
    <string name="import_string">Import</string>
    <string name="import_from_calendar_activity_name">Import from Calendar</string>

</resources>
