<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference
        android:title="@string/twenty_four_hour_clock"
        android:key="24hour"
        android:defaultValue="false"
        android:summary="@string/twenty_four_hour_summary">
    </CheckBoxPreference>
    <CheckBoxPreference
        android:title="@string/events_to_since"
        android:key="daysSinceDefault"
        android:defaultValue="false"
        android:summary="@string/events_to_since_summary">
    </CheckBoxPreference>
    <CheckBoxPreference
   		android:title="@string/notice_weekends_setting"
   		android:key="showWeekendNotice"
   		android:defaultValue="true"
   		android:summary="@string/notice_weekends_summary" >
    </CheckBoxPreference>
    <ListPreference
        android:title="@string/actionbar_theme_setting"
        android:key="actionBarTheme"
        android:defaultValue="0"
        android:entries="@array/actionbar_theme_array"
        android:entryValues="@array/actionbar_theme_values"
        android:dialogTitle="@string/select_theme" >
    </ListPreference>
    <ListPreference
        android:title="@string/calendar_icon_setting"
        android:key="calendarIconTheme"
        android:defaultValue="1"
        android:entries="@array/calendarIcon_array"
        android:entryValues="@array/calendarIcon_values"
        android:dialogTitle="@string/select_theme" >
    </ListPreference>
    
</PreferenceScreen>