<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sm.daysuntilcards.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/create_date"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/create_date"
        android:icon="@drawable/ic_action_new"/>
    
    <item android:id="@+id/clear_all"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/delete_all" />
    
    <item android:id="@+id/help"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/help" />

</menu>
